--- a/index.html
+++ b/index.html
@@ -7,8 +7,26 @@
   <title>Dashboard</title>
 </head>
 <body>
-  <header>
+  <header >
     <h1>Dashboard</h1>
+
+    <div id="menu-container">
+  <div id="hamburger">
+    ☰
+  </div>
+
+  <div id="menu-panel">
+    <a href="https://docs.google.com/spreadsheets/d/12F7QEunogkjXBNANGGGvZNChKIl8YSnY/export?format=xlsx"
+       class="menu-option" download>
+      📄 Catación
+    </a>
+
+    <a href="https://docs.google.com/spreadsheets/d/1a2J_Zx4F3dQzha90WcilD1RA_Z9gzqvb/export?format=xlsx&gid=534646916"
+       class="menu-option" download>
+      📄 Catación Robusta
+    </a>
+  </div>
+</div>
   </header>
 
   <main id="main-container">
