--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       📄 Catación
     </a>
 
-    <a href="https://docs.google.com/spreadsheets/d/1a2J_Zx4F3dQzha90WcilD1RA_Z9gzqvb/export?format=xlsx&gid=534646916"
+    <a href="https://docs.google.com/spreadsheets/d/1a2J_Zx4F3dQzha90WcilD1RA_Z9gzqvb/export?format=xlsx"
        class="menu-option" download>
       📄 Catación Robusta
     </a>
@@ -64,3 +64,4 @@
   <script src="script.js"></script>
 </body>
 </html>
+
