--- a/index.html
+++ b/index.html
@@ -16,12 +16,13 @@
   </div>
 
   <div id="menu-panel">
-    <a href="https://docs.google.com/spreadsheets/d/18c6zFAwnOYBu01dVq2lVuVgfc1_MxgPV/export?format=xlsx"
+    <a href="https://docs.google.com/spreadsheets/d/10Bb-iYMuGYUHHuhD4iqE5_f1ajAclb6h/export?format=xlsx"
        class="menu-option" download>
       📄 Catación
     </a>
 
-    <a href="https://docs.google.com/spreadsheets/d/1e3Bc8z5Yrnr84FzjyBpjqIKokqyHMphp/export?format=xlsx"
+    <a href="https://docs.google.com/spreadsheets/d/1dzsRLn8CxxdhH_UMkxgqURcz3un_cKLH/export?format=xlsx"
+      1dzsRLn8CxxdhH_UMkxgqURcz3un_cKLH
        class="menu-option" download>
       📄 Catación Robusta
     </a>
@@ -64,6 +65,7 @@
   <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
