--- a/index.html
+++ b/index.html
@@ -16,15 +16,15 @@
   </div>
 
   <div id="menu-panel">
-    <a href="https://docs.google.com/spreadsheets/d/10Bb-iYMuGYUHHuhD4iqE5_f1ajAclb6h/export?format=xlsx"
+    <a href="https://drive.google.com/drive/folders/1-97d3bAzF4NCS6tCsu39oP2jgRmsYEoT?usp=sharing"
        class="menu-option" download>
       📄 Catación
     </a>
 
-    <a href="https://docs.google.com/spreadsheets/d/1dzsRLn8CxxdhH_UMkxgqURcz3un_cKLH/export?format=xlsx"
+    <a href="https://drive.google.com/drive/folders/1xnEqmtlqhFD4eBk8FiqV5VPo1A2Yryp-?usp=sharing"
       1dzsRLn8CxxdhH_UMkxgqURcz3un_cKLH
        class="menu-option" download>
-      📄 Catación Robusta
+      📄 Almacén
     </a>
   </div>
 </div>
@@ -65,6 +65,7 @@
   <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
