--- a/index.html
+++ b/index.html
@@ -16,6 +16,11 @@
   </div>
 
   <div id="menu-panel">
+<a href="https://drive.google.com/drive/folders/103qxST75KLI1VhUVxwUnebZSQY_HzNXy?usp=sharing"
+       class="menu-option" download>
+      📄 Secado Natural
+    </a>
+    
     <a href="https://drive.google.com/drive/folders/1-97d3bAzF4NCS6tCsu39oP2jgRmsYEoT?usp=sharing"
        class="menu-option" download>
       📄 Catación
@@ -65,6 +70,7 @@
   <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
